# hackGT-prizepix

./: WARP.md  cursorrules.md
backend_hackgt/: API_DOCUMENTATION.md  BACKEND_INDEX.md  CONSOLIDATED_API_ANALYSIS.md  FRONTEND_API_DOCUMENTATION.md  PARLAY_REFACTOR.md  PYTHON_API_INTEGRATION.md  README.md  REDIS_SCHEMA_DESIGN.md  SIMULATED_TIME.md  TIME_PIPELINE.md  app.py  betting_simulator.py  bucks_last10_games.csv  dump.rdb  jest.config.js  package-lock.json  package.json  requirements.txt  scrape_game_id.py  scraper.py  start_server.py  start_with_python_api.sh  test-consolidated-api.js  test-ordered-search.js  test-star-players-search.js  test_api.py  test_user_parlays.py  troubleshoot-consolidated-api.js
backend_hackgt/data/: balance-history.json  bets.json  betting-data.json  contracts.json  demo-state.json  parlays.json  trade-logs.json
backend_hackgt/scripts/: migrate-redis-to-json.js  redis-inspect.sh
backend_hackgt/src/: app.ts  config.ts  test-setup.ts  types.ts
db-migration/: db-schema.md
newscrape/: .cursorrules  .gitignore  API_SETUP_GUIDE.md  README.md  api_examples.js  api_server.py  env.example  frontend_integration_example.html  pyproject.toml  setup.py  start_api.sh  test_api.py  test_frontend_integration.js
newscrape/app/: __init__.py  cli.py  config.py  models.py
newscrape/app/ingest/: __init__.py  enricher.py  fetcher.py  normalizer.py
newscrape/app/sources/: __init__.py  googlenews.py  googlenews_mock.py  rss.py
newscrape/app/storage/: __init__.py  export.py  sqlite.py
newscrape/data/: sources.yaml
real-time-chart/: implementation-gap-analysis.md  package.json  pnpm-lock.yaml  real-time-chart.tsx
real-time-chart/app/: globals.css  page.tsx
real-time-chart/components/: bet-holdings-chart.tsx  bet-portfolio.tsx  contract-betting-form.tsx  (+2 more)
search-page/: betting-balance-chart.tsx  globals.css  header.tsx  layout.tsx  news-snippet.tsx  page.tsx  player-stock-chart.tsx  portfolio-chart.tsx  suggested-bets.tsx
(+29 files in other folders)
